@@ -1,4 +1,10 @@
 2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+	Committed by Katsumi Yamaoka  <yamaoka@jpl.org>.
+
+	* w3m-xmas.el (format-buffers-tab-line): Protect aginst errors
+	caused by the illegal type of `w3m-current-url'.
+
+2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/sb-vinelinux.el: Changed the coding system of this file
 	to iso-2022-7bit.
